@@ -1,3 +1,8 @@
+Xfce 4.6rc2 (Xfce 4.5.99.2):
+
+  * Fix menu plugin crash when selecting custom menu file (bug 4879).
+
+
 Xfce 4.6rc1 (Xfce 4.5.99.1):
 ----------------------------
 
